# apps/api/src/app.module.ts
@@ -3,6 +3,7 @@ import { ConfigModule } from '@nestjs/config';
 import { AppController } from './app.controller';
 import { AppService } from './app.service';
 import { AuthModule } from './auth/auth.module';
+import { IntegrationsModule } from './integrations/integrations.module';
 import { PrismaModule } from './prisma/prisma.module';
 import { TaskModule } from './task/task.module';
 import { WorkspaceModule } from './workspace/workspace.module';
@@ -14,6 +15,7 @@ import { WorkspaceModule } from './workspace/workspace.module';
     AuthModule,
     WorkspaceModule,
     TaskModule,
+    IntegrationsModule,
   ],
   controllers: [AppController],
   providers: [AppService],
