# apps/api/src/integrations/integrations.module.ts
@@ -1,0 +1,12 @@
+import { Module } from '@nestjs/common';
+import { PrismaModule } from '../prisma/prisma.module';
+import { TaskModule } from '../task/task.module';
+import { IntegrationsController } from './integrations.controller';
+import { IntegrationsService } from './integrations.service';
+
+@Module({
+  imports: [PrismaModule, TaskModule],
+  controllers: [IntegrationsController],
+  providers: [IntegrationsService],
+})
+export class IntegrationsModule {}
